# Gloxinia

./: .gitignore  README.md
.github/workflows/: ci.yml  deploy.yml
crate/: Cargo.toml  build-wasm.sh
crate/src/: lib.rs
docs/: 00-charter-and-discipline.md  01-ai-first-ambiguity.md  02-experiment-design.md  03-repetition-forgetting.md  04-low-norm-generalization.md  05-crystallization-insight.md  06-enlightenment.md
experiments/crystallization/: RESULTS_crystal.md
experiments/crystallization/results/: normal_sw0.json  switch_1000.json  switch_15000.json  switch_3000.json  switch_8000.json  wd0_never.json
experiments/enlightenment/: RESULTS_enlightenment.md  analyze.py
experiments/enlightenment/results/: spectrum.json
experiments/grokking_encoding/: DISTILLED_RECIPE.md  README.md  RESULTS.md  RESULTS_v2.md  RESULTS_v3_seeds.md  encoding.py  harness.py  minimal_grok.py  plot.py  run.py
experiments/grokking_encoding/results/: fourier.json  fourier_nf16.json  fourier_nf32.json  fourier_nf48.json  onehot.json  onehot_distractor.json
experiments/layers/: RESULTS_layers.md  layers_probe.py
experiments/layers/results/: layers.json
experiments/low_norm/: RESULTS_low_norm.md
experiments/low_norm/results/: m1_wd0.1.json  m1_wd0.3.json  m1_wd0.5.json  m1_wd0.json  m1_wd1.0.json  m1_wd2.0.json  m1_wd3.0.json  m1_wd5.0.json  m2_gen_p17.json  m2_gen_p31.json  (+8 more)
experiments/repetition_forgetting/: RESULTS_hrep.md  rf_harness.py  rf_run.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: chart.ts  main.ts  style.css
(+47 files in other folders)
