[package]
name = "gloxinia"
version = "0.1.0"
edition = "2021"
description = "In-browser grokking demonstrator (Gloxinia) — the modular-addition MLP from the experiments, compiled to WASM."
license = "MIT"
repository = "https://github.com/masamoto1982/Gloxinia"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.100"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
